--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../src/assets/logo.svg" />
+    <link
+      rel="icon"
+      href="https://o.remove.bg/downloads/544254bf-9462-4b66-a78f-b790f02d2611/images-removebg-preview.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
