--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://o.remove.bg/downloads/544254bf-9462-4b66-a78f-b790f02d2611/images-removebg-preview.png"
-    />
+    <link rel="icon" href="bitCoinIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
